--- a/calc.html
+++ b/calc.html
@@ -1,31 +1,33 @@
+<!DOCTYPE html>
 <html>
 <head>
-	<script type=!text/javascript" scr="script.js"></script>
+	<script src="calc.js"></script>
 </head>
 <body>
 	<div background="Bg" position="Absolute" align="center">
 		<div class="box">
 			<div class="display">
-				<input type="text" size="20" id="d" align="center">
+				<input type="text" size="20" id="visor" align="center">
 			</div>
 			<div class="buttons">
-				<p><input type="button" class="Numeric"  value="7" onclick='addNumber("7")'> 
-			   	   <input type="button" class="Numeric"  value="8" onclick='addNumber("8")'>
-			   	   <input type="button" class="Numeric"  value="9" onclick='addNumber("9")'>
+			
+				<p><input type="button" class="Numeric"  value="7" onclick='addNumber(7)'> 
+			   	   <input type="button" class="Numeric"  value="8" onclick='addNumber(8)'>
+			   	   <input type="button" class="Numeric"  value="9" onclick='addNumber(9)'>
 		           <input type="button" class="Operator" value="/" onclick='addOperator("/")'>
 				</p>
-				<p><input type="button" class="Numeric"  value="4" onclick='addNumber("4")'>
-		       	   <input type="button" class="Numeric"  value="5" onclick='addNumber("5")'>
-		       	   <input type="button" class="Numeric"  value="6" onclick='addNumber("6")'>
+				<p><input type="button" class="Numeric"  value="4" onclick='addNumber(4)'>
+		       	   <input type="button" class="Numeric"  value="5" onclick='addNumber(5)'>
+		       	   <input type="button" class="Numeric"  value="6" onclick='addNumber(6)'>
 		       	   <input type="button" class="Operator" value="*" onclick='addOperator("*")'>
 				</p>
-				<p><input type="button" class="Numeric"  value="1" onclick='addNumber("1")'>
-		       	   <input type="button" class="Numeric"  value="2" onclick='addNumber("2")'>
-		       	   <input type="button" class="Numeric"  value="3" onclick='addNumber("3")'>
+				<p><input type="button" class="Numeric"  value="1" onclick='addNumber(1)'>
+		       	   <input type="button" class="Numeric"  value="2" onclick='addNumber(2)'>
+		       	   <input type="button" class="Numeric"  value="3" onclick='addNumber(3)'>
 		       	   <input type="button" class="Operator" value="+" onclick='addOperator("-")'>
 				</p>
 	 			<p><input type="button" class="Numeric"  value="." onclick='addNumber(".")'>
-		       	   <input type="button" class="Numeric"  value="0" onclick='addNumber("0")'>
+		       	   <input type="button" class="Numeric"  value="0" onclick='addNumber(0)'>
 		       	   <input type="button" class="Operator" value="C" onclick='addOperator("C")'>
 		       	   <input type="button" class="Operator" value="=" onclick='addOperator("=")'> 
 				</p>
