function to operation

--- a/calc.html
+++ b/calc.html
@@ -28,8 +28,8 @@
 				</p>
 	 			<p><input type="button" class="Numeric"  value="." onclick='mathExpression(".")'>
 		       	   <input type="button" class="Numeric"  value="0" onclick='mathExpression(0)'>
-		       	   <input type="button" class="Operator" value="C" onclick='addOperator("C")'>
-		       	   <input type="button" class="Operator" value="=" id ="="  onclick='mathExpression("=")'> 
+		       	   <input type="button" class="Operator" value="C" onclick='mathExpression()'>
+		       	   <input type="button" class="Operator" value="-" onclick='mathExpression("-")'> 
 				</p>
 			</div>		
 		</div>
