Trying to return equal function

--- a/calc.html
+++ b/calc.html
@@ -28,9 +28,10 @@
 				</p>
 	 			<p><input type="button" class="Numeric"  value="." onclick='mathExpression(".")'>
 		       	   <input type="button" class="Numeric"  value="0" onclick='mathExpression(0)'>
-		       	   <input type="button" class="Operator" value="C" onclick='mathExpression()'>
+		       	   <input type="button" class="Operator" value="C" onclick='clear("")'>
 		       	   <input type="button" class="Operator" value="-" onclick='mathExpression("-")'> 
 				</p>
+					<input type="button" class="Operator" value="=" onclick='mathExpression("=")'>
 			</div>		
 		</div>
 	</div>
